--- a/views/newurl.ejs
+++ b/views/newurl.ejs
@@ -11,7 +11,7 @@
   <body>
     <div class="url-container">
       <h1>your new url is http//127.0.0.1<%= newUrl %></h1>
-      <a href="http://127.0.0.1:8000/<%= newUrl %>">GO TO</a>
+      <a href="https://newapp008.herokuapp.com/<%= newUrl %>">GO TO</a>
     </div>
   </body>
 </html>
