--- a/views/newurl.ejs
+++ b/views/newurl.ejs
@@ -10,7 +10,10 @@
   </head>
   <body>
     <div class="url-container">
-      <h1>your new url is http//127.0.0.1<%= newUrl %></h1>
+      <h1>your new url is https://newapp008.herokuapp.com/<%= newUrl %>"></h1>
+       <br>
+        <br>
+        
       <a href="https://newapp008.herokuapp.com/<%= newUrl %>">GO TO</a>
     </div>
   </body>
